<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="loodos.droid.bitcointicker.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context=".ui.auth.SignUpActivity">

        <RelativeLayout
            android:id="@+id/signUp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/Title_text_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/large_start_margin">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/medium_margin">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/text_email"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="@dimen/default_margin"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text="@={viewmodel.email}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:labelFor="@id/edit_text_password"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="@dimen/default_margin"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={viewmodel.password}" />


                    <Button
                        android:id="@+id/button_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large_start_margin"
                        android:backgroundTint="@color/color_primary"
                        android:onClick="@{() -> viewmodel.signup()}"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mid_text_size" />

                    <TextView
                        android:id="@+id/text_view_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{(v) -> viewmodel.goToLogin(v)}"
                        android:text="@string/login_here"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                </LinearLayout>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/large_top_margin"
                android:background="@drawable/user_profile_image_background"
                android:contentDescription="@string/imageButtonDesc"
                android:src="@drawable/ic_boy" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</layout>